<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdderFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.08">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cacel_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="0dp"
                android:backgroundTint="@color/kulrang_och"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bekor_qilish"
                    android:textSize="15sp"
                    android:textColor="@color/kulrang"
                    android:textStyle="bold"
                    android:clickable="false"
                    android:fontFamily="sans-serif-light"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/save_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="0dp"
                android:backgroundTint="@color/kulrang_och"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/saqlash"
                    android:textSize="15sp"
                    android:clickable="false"
                    android:textColor="@color/yashil"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"/>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/card1"
        app:cardElevation="0dp"
        app:layout_constraintHeight_percent="0.3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consta1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ikta_nuqta">

                <NumberPicker
                    android:id="@+id/num_picker1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:selectionDividerHeight="0dp"
                    android:soundEffectsEnabled="true"
                    tools:targetApi="q" />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <TextView
                android:id="@+id/ikta_nuqta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ikta_nuqta"
                android:textSize="40sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@id/consta1"
                app:layout_constraintRight_toLeftOf="@id/consta2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consta2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toRightOf="@id/ikta_nuqta"
                app:layout_constraintRight_toRightOf="parent">


                <NumberPicker
                    android:id="@+id/num_picker2"
                    android:layout_width="match_parent"
                    android:selectionDividerHeight="0dp"
                    android:soundEffectsEnabled="true"
                    android:layout_height="match_parent"
                    tools:targetApi="q" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:cardElevation="0dp"
                android:backgroundTint="@color/kulrang"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/card2"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Takrorlash"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/haf_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/d"
                    android:padding="10dp"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/haf_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/s"
                    android:layout_margin="5dp"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/haf_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/c"
                    android:layout_margin="5dp"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/haf_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/p"
                    android:layout_margin="5dp"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/haf_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/j"
                    android:layout_margin="5dp"
                    android:padding="10dp"/>


                <TextView
                    android:id="@+id/haf_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="SH"
                    android:layout_margin="5dp"
                    android:padding="10dp"/>


                <TextView
                    android:id="@+id/haf_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/y"
                    android:layout_margin="5dp"
                    android:padding="10dp"/>



            </LinearLayout>
            </HorizontalScrollView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/music_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/budilnik_nomlanishi"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:textSize="20sp"/>

                <TextView
                    android:id="@+id/install_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hech_qaysi"
                    android:textSize="16sp"
                    android:textColor="@color/kulrang"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/tebranish_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/signal_paytida_tebranish"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="20sp"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_compat2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:thumb="@drawable/thumb"
                    app:track="@drawable/track"
                    app:showText="true"
                    android:textOn="@string/on"
                    android:textOff="@string/off"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>